--- a/3nen/3_tasizan_hikizan_hissan/39-9,10_senno_kuraihe_kuriagaru_hissan.html
+++ b/3nen/3_tasizan_hikizan_hissan/39-9,10_senno_kuraihe_kuriagaru_hissan.html
@@ -138,7 +138,7 @@
       const config = {
         appId: "39-9,10_senno_kuraihe_kuriagaru_hissan",
         mainTitle: "３　たし算とひき算の筆算",
-        title: "千の位へくり上がるひっ算（まとめ）",
+        title: "千の位へくり上がるひっ算",
         baseScore: 100,
         targetTimePerQuestion: 35,
         starThresholds: { star1: 100, star2: 120, star3: 140, star4: 160, star5: 180 },
