--- a/3nen/3_tasizan_hikizan_hissan/41-4_3ketano_hikizanno_hissan⑵.html
+++ b/3nen/3_tasizan_hikizan_hissan/41-4_3ketano_hikizanno_hissan⑵.html
@@ -7,14 +7,23 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
   <style>
-    :root {
-      --c-bg-main: #f1f8e9; --c-primary: #689f38; --c-primary-dark: #33691e;
-      --c-primary-light: #dcedc8; --c-button-bg: #ff9800; --c-button-hover: #ffb74d;
-      --c-result-area-bg: #dcedc8; --c-problem-row-bg: #ffffff; --c-history-bg: #c5e1a5;
-      --c-text-main: #212121; --c-text-on-button: #ffffff;
-      --c-feedback-correct-bg: #e8f5e9; --c-feedback-wrong-bg: #ffebee;
-      font-size: 16px;
-    }
+:root {
+  /* オレンジ系の配色 */
+  --c-bg-main: #fff3e0;          /* 背景: とても薄いオレンジ */
+  --c-primary: #fb8c00;          /* メインカラー: 少し濃いオレンジ */
+  --c-primary-dark: #e65100;      /* アクセント(文字など): さらに濃いオレンジ */
+  --c-primary-light: #ffcc80;     /* 明るい部分(見出し背景など): 薄いオレンジ */
+  --c-button-bg: #ff9800;         /* ボタン: 元々のオレンジ */
+  --c-button-hover: #ffb74d;      /* ボタン(マウスオーバー): 明るいオレンジ */
+  --c-result-area-bg: #ffcc80;     /* 結果エリアの背景 */
+  --c-problem-row-bg: #ffffff;   /* 問題の背景: 白 */
+  --c-history-bg: #ffb74d;        /* 履歴の背景 */
+  --c-text-main: #212121;         /* 基本の文字色: 黒 */
+  --c-text-on-button: #ffffff;   /* ボタンの文字色: 白 */
+  --c-feedback-correct-bg: #fff8e1; /* 正解した時の背景: ごく薄いオレンジ */
+  --c-feedback-wrong-bg: #ffebee;   /* 間違えた時の背景: 薄い赤 */
+  font-size: 16px;
+}
     body {
       font-family: 'Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'Meiryo', sans-serif;
       background-color: var(--c-bg-main); color: var(--c-text-main); margin: 0;
@@ -122,15 +131,53 @@
         targetTimePerQuestion: 25, 
         starThresholds: { star1: 100, star2: 120, star3: 140, star4: 160, star5: 180 },
         problemGenerator() {
-            // △4の意図を汲んだ固定問題
-            const staticProblems = [
-                { a: 272, b: 268, answers: [0, 0, 4] }, // 問1: 答えが1桁
-                { a: 823, b: 733, answers: [0, 9, 0] }, // 問2: 百の位が0になる
-                { a: 210, b: 190, answers: [0, 2, 0] }, // 問3: 十の位が1
-                { a: 403, b: 158, answers: [2, 4, 5] }, // 問4: 十の位が0
-                { a: 381, b: 356, answers: [0, 2, 5] }  // 問5: 答えが2桁
-            ];
-            return staticProblems;
+            // 便利なヘルパー関数：指定した範囲のランダムな整数を返す
+            const getRandomInt = (min, max) => Math.floor(Math.random() * (max - min + 1)) + min;
+
+            // 解答を計算してフォーマットする関数
+            const calculateAndFormatAnswers = (a, b) => {
+                const answer = a - b;
+                const ansH = Math.floor(answer / 100);
+                const ansT = Math.floor((answer % 100) / 10);
+                const ansO = answer % 10;
+                return [ansH, ansT, ansO];
+            };
+
+            /**
+             * 【△4のテーマ】答えが2けた(百の位が0)になる問題を作る関数
+             */
+            const createResultUnder100Problem = () => {
+                // 1. 引く数(b)の百の位を決める (1〜8)
+                const h_b = getRandomInt(1, 8);
+                // 2. 引かれる数(a)の百の位は、それより1だけ大きくする
+                const h_a = h_b + 1;
+
+                // 3. 引く数(b)の下2けたを決める (20〜98)
+                // ※範囲を少し限定して、簡単すぎる問題や難しすぎる問題を避ける
+                const b_tens_ones = getRandomInt(20, 98);
+
+                // 4. 引かれる数(a)の下2けたは、bの下2けたより必ず小さくする
+                // これにより、百の位からのくり下がりが強制的に発生する
+                const a_tens_ones = getRandomInt(1, b_tens_ones - 1);
+                
+                // 5. a と b の数値を組み立てる
+                const a = h_a * 100 + a_tens_ones;
+                const b = h_b * 100 + b_tens_ones;
+                
+                // 念のため、a > b でない場合は作り直す (基本的には不要)
+                if (a <= b) {
+                    return createResultUnder100Problem();
+                }
+
+                return { a, b, answers: calculateAndFormatAnswers(a, b) };
+            };
+
+            // --- メインロジック ---
+            const problems = [];
+            for (let i = 0; i < config.problemCount; i++) {
+                problems.push(createResultUnder100Problem());
+            }
+            return problems;
         }
         // ▲▲▲ ここまで ▲▲▲
       };
